[package]
name = "quic-socket"
version = "0.4.2"
edition = "2021"
authors = ["Ivan Nikitin <ivan@niktivan.org>"]
description = "Socket-esc wrapper on the quiche QUIC implementation"
readme= "README.md"
repository="https://github.com/Apolexian/QuicSocket"
homepage="https://github.com/Apolexian/QuicSocket"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "1.12.0", features = ["net"]}
quiche = "0.10.0"
log = "0.4.14"
