[package]
name = "quic-socket"
version = "0.7.5"
edition = "2021"
authors = ["Ivan Nikitin <ivan@niktivan.org>"]
description = "Socket-esc wrapper on the quiche QUIC implementation"
readme= "README.md"
repository="https://github.com/Apolexian/QuicSocket"
homepage="https://github.com/Apolexian/QuicSocket"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.1.0"
quinn = "0.8.0"
anyhow = "1.0.47"
rustls = "0.20.1"
rcgen = "0.8.14"
url = "2.2.2"
rustls-pemfile = "0.2.1"
tokio = "1.12.0"
futures-util = "0.3.17"
async-trait = "0.1.51"